--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ non_USfiltered.csv
 filtered.csv
 extracted_emojis.Rda
 e_twts_w_party.Rda
+Emoji_Sentiment_Data.csv
+Emoji_Sentiment_Data_v1.0.csv
